Impl [Nuclio] Make placeholder text more consistent
1. "Enter" instead of "Type"
2. Ellipsis at the end (with no space before it)
3. No a/an articles
4. For multiline: "Enter a/an X on each line..."

Also:
1. Rename "session key" to "access key" in placeholder (code entry type
   and V3IO Volume).
2. Rename "Work dir" to "Work directory" field.

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -11,7 +11,7 @@
                                             data-is-focused="true"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type name..."
+                                            data-placeholder-text="Enter name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="name"
                                             autocomplete="off">
@@ -51,7 +51,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type URL..."
+                                            data-placeholder-text="Enter URL..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="url"
                                             data-auto-complete="off">
@@ -68,7 +68,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type mount path..."
+                                            data-placeholder-text="Enter mount path..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volumeMount.mountPath"
                                             data-auto-complete="off">
@@ -86,7 +86,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type session key..."
+                                            data-placeholder-text="Enter access key..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.accessKey"
                                             data-auto-complete="off">
@@ -103,7 +103,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type container name..."
+                                            data-placeholder-text="Enter container name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.container"
                                             data-auto-complete="off">
@@ -120,7 +120,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type path in container..."
+                                            data-placeholder-text="Enter path in container..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.subPath"
                                             data-auto-complete="off">
@@ -137,7 +137,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type host path..."
+                                            data-placeholder-text="Enter host path..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.hostPath.path">
                 </igz-validating-input-field>
@@ -153,7 +153,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type secret name..."
+                                            data-placeholder-text="Enter secret name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.secret.secretName">
                 </igz-validating-input-field>
@@ -169,7 +169,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type config map name..."
+                                            data-placeholder-text="Enter config map name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.configMap.name">
                 </igz-validating-input-field>
@@ -186,7 +186,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.numberValidationPattern"
                                             data-validation-is-required="true"
-                                            data-placeholder-text="Type max workers..."
+                                            data-placeholder-text="Enter max workers..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="maxWorkers">
                 </igz-validating-input-field>
@@ -272,7 +272,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.stringValidationPattern"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type username..."
+                                            data-placeholder-text="Enter username..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="username">
                 </igz-validating-input-field>
@@ -288,7 +288,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.stringValidationPattern"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type password..."
+                                            data-placeholder-text="Enter password..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="password">
                 </igz-validating-input-field>
@@ -316,7 +316,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.stringValidationPattern"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type SASL username..."
+                                            data-placeholder-text="Enter SASL username..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="attributes.sasl.user">
                 </igz-validating-input-field>
@@ -332,7 +332,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.stringValidationPattern"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type SASL password..."
+                                            data-placeholder-text="Enter SASL password..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="attributes.sasl.password">
                 </igz-validating-input-field>
@@ -348,7 +348,7 @@
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-pattern="$ctrl.stringValidationPattern"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type event body..."
+                                            data-placeholder-text="Enter event body..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="attributes.event.body">
                 </igz-validating-input-field>
@@ -633,7 +633,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="false"
-                                            data-placeholder-text="Type worker allocator name..."
+                                            data-placeholder-text="Enter worker allocator name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="workerAllocatorName">
                 </igz-validating-input-field>
