--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -59,7 +59,7 @@
                                             data-update-data-field="value-key"
                                             data-form-object="$ctrl.keyValueInputForm"
                                             data-validation-is-required="!$ctrl.valueOptional"
-                                            data-placeholder-text="Type key...">
+                                            data-placeholder-text="Enter key...">
                 </igz-validating-input-field>
             </div>
 
