Impl [General] igzMoreInfo: Add support for HTML tooltips
Also:
- Set more-info component to lay out inline rather than as a block.
- Add K8s environment variable name validation pattern.
- Have default HTML lists style have no margin and smaller left padding.
- Align tooltips text to the left.

--- a/src/igz_controls/components/more-info/more-info.less
+++ b/src/igz_controls/components/more-info/more-info.less
@@ -2,7 +2,7 @@
     .more-info-color-set();
 
     position: relative;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     height: 36px;
     padding-left: 15px;
