--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -112,6 +112,7 @@
     }
 
     .tooltip-inner {
+        text-align: left;
         background-color: @tooltip-inner-bg-color;
         color: @tooltip-inner-color;
         border-radius: 2px;
