--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -73,6 +73,24 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
     font-family: @font-family-sans-serif;
 }
 
+ul, ol {
+    margin: 0;
+
+    /* modern */
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 14px;
+
+    /* older */
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 14px;
+}
+
 .row {
     margin: 0;
 }
