Impl [General] Reduce clickable area of "Create new X..." buttons
Relevant to key-value lists like Labels, Annotations, Environment
Variables, Triggers, etc.

--- a/src/nuclio/common/less/general-rules.less
+++ b/src/nuclio/common/less/general-rules.less
@@ -59,7 +59,7 @@ body {
     .create-topic-button,
     .create-broker-button,
     .create-subscription-button {
-        display: flex;
+        display: inline-flex;
         align-items: center;
         height: 36px;
         margin-top: 7px;
