IG-2271 [Pipelines] Add Pipelines icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -507,6 +507,10 @@
     .generateIconClass(98a);
 }
 
+.igz-icon-pipelines {
+    .generateIconClass(98b);
+}
+
 .ncl-icon-add {
     .generateIconClass(96e);
 }
