--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -12,6 +12,7 @@
                placeholder="{{$ctrl.placeholderText}}"
                data-ng-readonly="$ctrl.readOnly"
                data-ng-model="$ctrl.data"
+               data-ng-trim="{{$ctrl.isTrim}}"
                data-ng-model-options="$ctrl.inputModelOptions"
                data-ng-required="$ctrl.validationIsRequired"
                data-ng-maxlength="$ctrl.validationMaxLength"
