IG-2283 [Nuclio] Add S3 code entry type

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -43,11 +43,20 @@
                     padding: 24px 41px 0;
                     min-width: 700px;
 
-                    .ncl-code-entry-url {
+                    .ncl-code-entry-url,
+                    .ncl-code-entry-s3 {
                         max-width: 700px;
+                    }
 
+                    .ncl-code-entry-url {
                         .field-label {
                             margin-top: 10px;
+                        }
+                    }
+
+                    .ncl-code-entry-s3 {
+                        .field-label {
+                            margin-top: 15px;
                         }
                     }
 
