--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -30,6 +30,12 @@
         &:last-child {
             padding-bottom: 0;
         }
+
+        .tooltip-wrapper {
+            .more-info-wrapper {
+                padding-left: 0;
+            }
+        }
     }
 
     .attribute-field {
