--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -22,6 +22,10 @@
             color: @dusk-three;
         }
 
+        .label-with-tooltip {
+            height: 20px;
+        }
+
         .validating-input-field {
             .input-field {
                 padding: 0 10px 0 17px;
