--- a/src/igz_controls/components/more-info/more-info.tpl.html
+++ b/src/igz_controls/components/more-info/more-info.tpl.html
@@ -1,4 +1,4 @@
-<div class="more-info-wrapper" id="more-info-wrapper">
+<div class="more-info-wrapper">
     <div data-ng-if="!$ctrl.isDefaultTooltipEnabled">
         <div data-ng-class="{'disabled': $ctrl.isDisabled, 'click-trigger': $ctrl.isClickMode()}"
              data-ng-click="$ctrl.onQuestionMarkClick()"
