--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -37,7 +37,7 @@
             <div class="igz-col-65 tooltip-wrapper">
                 <igz-more-info
                         data-ng-if="$ctrl.isTooltipVisible()"
-                        data-description="{{$ctrl.tooltip}}"
+                        data-description="{{$ctrl.getTooltip()}}"
                         data-trigger="click"
                         data-is-html-enabled="true">
                 </igz-more-info>
