--- a/src/igz_controls/components/more-info/more-info.tpl.html
+++ b/src/igz_controls/components/more-info/more-info.tpl.html
@@ -1,28 +1,39 @@
 <div class="more-info-wrapper">
-    <div data-ng-if="!$ctrl.isDefaultTooltipEnabled"
-         data-ng-class="{'disabled': $ctrl.isDisabled}"
-         class="question-mark igz-icon-help-round">
-    </div>
-    <div data-ng-if="!$ctrl.isDefaultTooltipEnabled"
-         class="row-description">
-        {{$ctrl.description}}
-    </div>
-
-    <div data-ng-if="$ctrl.isDefaultTooltipEnabled && !$ctrl.isDefaultTooltipHtml"
-         data-ng-class="{'disabled': $ctrl.isDisabled}"
-         class="question-mark igz-icon-help-round"
-         data-uib-tooltip="{{$ctrl.description}}"
-         data-tooltip-placement="{{$ctrl.defaultTooltipPlacement}}"
-         data-tooltip-popup-delay="{{$ctrl.defaultTooltipPopupDelay}}"
-         data-tooltip-append-to-body="true">
+    <div data-ng-if="!$ctrl.isDefaultTooltipEnabled">
+        <div data-ng-class="{'disabled': $ctrl.isDisabled, 'click-trigger': $ctrl.isClickMode()}"
+             data-ng-click="$ctrl.onQuestionMarkClick()"
+             class="question-mark igz-icon-help-round">
+        </div>
+        <div class="row-description"
+             data-ng-if="$ctrl.isDescriptionVisible && $ctrl.isHtmlEnabled"
+             data-ng-bind-html="$ctrl.description">
+        </div>
+        <div class="row-description" data-ng-if="$ctrl.isDescriptionVisible && !$ctrl.isHtmlEnabled">
+            {{$ctrl.description}}
+        </div>
     </div>
 
-    <div data-ng-if="$ctrl.isDefaultTooltipEnabled && $ctrl.isDefaultTooltipHtml"
-         data-ng-class="{'disabled': $ctrl.isDisabled}"
-         class="question-mark igz-icon-help-round"
-         data-uib-tooltip-html="$ctrl.description"
-         data-tooltip-placement="{{$ctrl.defaultTooltipPlacement}}"
-         data-tooltip-popup-delay="{{$ctrl.defaultTooltipPopupDelay}}"
-         data-tooltip-append-to-body="true">
+    <div data-ng-if="$ctrl.isDefaultTooltipEnabled">
+        <div data-ng-if="!$ctrl.isHtmlEnabled"
+             class="question-mark igz-icon-help-round"
+             data-ng-class="{'disabled': $ctrl.isDisabled}"
+             data-tooltip-class="more-info-tooltip"
+             data-uib-tooltip="{{$ctrl.description}}"
+             data-tooltip-placement="{{$ctrl.defaultTooltipPlacement}}"
+             data-tooltip-popup-delay="{{$ctrl.defaultTooltipPopupDelay}}"
+             data-tooltip-trigger="$ctrl.trigger"
+             data-tooltip-append-to-body="true">
+        </div>
+
+        <div data-ng-if="$ctrl.isHtmlEnabled"
+             class="question-mark igz-icon-help-round"
+             data-ng-class="{'disabled': $ctrl.isDisabled}"
+             data-tooltip-class="more-info-tooltip"
+             data-uib-tooltip-html="$ctrl.description"
+             data-tooltip-placement="{{$ctrl.defaultTooltipPlacement}}"
+             data-tooltip-popup-delay="{{$ctrl.defaultTooltipPopupDelay}}"
+             data-tooltip-trigger="$ctrl.trigger"
+             data-tooltip-append-to-body="true">
+        </div>
     </div>
 </div>
