--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -8,10 +8,12 @@
 </span>
 
 <span class="main-header-title" data-ng-if="$ctrl.mainHeaderTitle.project">
-    <span class="main-header-title-text" data-ng-click="$ctrl.goToFunctionsList()">{{$ctrl.mainHeaderTitle.projectName}}</span>
+    <span class="main-header-title-text" data-ng-click="$ctrl.goToFunctionsList()">
+        {{$ctrl.mainHeaderTitle.project.spec.displayName}}
+    </span>
 
     <ncl-breadcrumbs-dropdown data-state="$ctrl.mainHeaderTitle.state"
-                              data-title=""
+                              data-title="$ctrl.mainHeaderTitle.project.spec.displayName"
                               data-project="$ctrl.mainHeaderTitle.project"
                               data-type="projects"
                               data-get-functions="$ctrl.getFunctions({id: id})"
@@ -25,7 +27,7 @@
 
         <ncl-breadcrumbs-dropdown data-ng-if="$ctrl.mainHeaderTitle.version"
                                   data-state="$ctrl.mainHeaderTitle.state"
-                                  data-title=""
+                                  data-title="$ctrl.mainHeaderTitle.function"
                                   data-project="$ctrl.mainHeaderTitle.project"
                                   data-type="functions"
                                   data-get-functions="$ctrl.getFunctions({id: id})"
