--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -512,20 +512,32 @@
                     margin-left: 44px;
                 }
 
-                .table-body-wrapper {
-                    border-left: 2px solid @pale-grey;
-                }
-
                 .table-body {
                     margin-bottom: 0;
 
-                    .ncl-key-value-input {
-                        border: 1px solid @pale-grey;
-                        border-left: none;
-                        border-bottom: none;
-
+                    &:not(:last-child) {
                         .input-wrapper {
-                            border: none;
+                            border-bottom: none;
+                        }
+                    }
+
+                    .input-wrapper {
+                        border: 1px solid @pale-grey;
+
+                        .input-key-wrapper {
+                            border-left: 1px solid @pale-grey;
+                            border-right: 1px solid @pale-grey
+                        }
+
+                        .input-field {
+                            &:not(.invalid):not(:focus) {
+                                border-color: transparent;
+                            }
+                        }
+
+                        .igz-action-item {
+                            height: 36px;
+                            width: 36px;
                         }
                     }
                 }
