Show column resize elements on hover

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -241,7 +241,7 @@
     right: -1px;
     cursor: col-resize;
 
-    &:active, &.hover {
+    &.active, &:not(.resizing).hover {
         background-color: @light-grey-three;
     }
 }
