Add class text-nowrap

--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -403,15 +403,7 @@
                     text-align: right;
                 }
 
-                &.container-bandwidth {
-                    white-space: nowrap;
-                }
-
-                &.container-latency {
-                    white-space: nowrap;
-                }
-
-                &.container-iops {
+                &.text-nowrap {
                     white-space: nowrap;
                 }
             }
