Impl IG-2302 [General] Display column resize handles (#615)

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -239,5 +239,12 @@
     position: absolute;
     top: 0;
     right: -1px;
-    cursor: col-resize;
+
+    &:not(.last) {
+        cursor: col-resize;
+    }
+
+    &.active, &:not(.resizing).hover {
+        background-color: @light-grey-three;
+    }
 }
