Impl [Nuclio] Configuration: add/edit tooltips

--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -43,11 +43,16 @@
         padding: 8px 0 6px;
 
         .field-label {
+            height: 22px;
             text-transform: capitalize;
         }
 
         &.attribute-field-checkbox {
             padding: 35px 0 19px;
+        }
+
+        .more-info-wrapper {
+            height: auto;
         }
     }
 
