--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -69,7 +69,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volumeMount.mountPath)">
                 <div class="field-label">
                     <span>{{ 'functions:MOUNT_PATH' | i18next }}</span>
-                    <igz-more-info data-description="A mount path for referencing the data from the function"
+                    <igz-more-info data-description="{{ 'functions:TOOLTIP.MOUNT_PATH' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -91,7 +91,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.accessKey)">
                 <div class="field-label">
                     <span>{{ 'functions:ACCESS_KEY' | i18next }}</span>
-                    <igz-more-info data-description="A platform data-access key"
+                    <igz-more-info data-description="{{ 'functions:TOOLTIP.ACCESS_KEY' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -114,7 +114,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.container)">
                 <div class="field-label">
                     <span>{{ 'functions:CONTAINER_NAME' | i18next }}</span>
-                    <igz-more-info data-description="The name of the data container that contains the data"
+                    <igz-more-info data-description="{{ 'functions:TOOLTIP.CONTAINER_NAME' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -134,8 +134,8 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.subPath)">
                 <div class="field-label">
-                    <span>Path</span>
-                    <igz-more-info data-description="A relative directory path within the data container"
+                    <span>{{ 'common:PATH' | i18next }}</span>
+                    <igz-more-info data-description="{{ 'common:TOOLTIP.PATH' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
