i18n added new variables

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -69,7 +69,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volumeMount.mountPath)">
                 <div class="field-label">
                     <span>{{ 'functions:MOUNT_PATH' | i18next }}</span>
-                    <igz-more-info data-description="{{ 'functions:TOOLTIP.MOUNT_PATH' | i18next }}"
+                    <igz-more-info data-description="{{ 'functions:MOUNT_PATH_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -91,7 +91,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.accessKey)">
                 <div class="field-label">
                     <span>{{ 'functions:ACCESS_KEY' | i18next }}</span>
-                    <igz-more-info data-description="{{ 'functions:TOOLTIP.ACCESS_KEY' | i18next }}"
+                    <igz-more-info data-description="{{ 'functions:ACCESS_KEY_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -114,7 +114,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.container)">
                 <div class="field-label">
                     <span>{{ 'functions:CONTAINER_NAME' | i18next }}</span>
-                    <igz-more-info data-description="{{ 'functions:TOOLTIP.CONTAINER_NAME' | i18next }}"
+                    <igz-more-info data-description="{{ 'functions:CONTAINER_NAME_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -135,7 +135,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.subPath)">
                 <div class="field-label">
                     <span>{{ 'common:PATH' | i18next }}</span>
-                    <igz-more-info data-description="{{ 'common:TOOLTIP.PATH' | i18next }}"
+                    <igz-more-info data-description="{{ 'functions:PATH_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
