Impl [General] Several text corrections

--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -45,6 +45,10 @@
         .field-label {
             height: 22px;
             text-transform: capitalize;
+
+            igz-more-info {
+                text-transform: initial;
+            }
         }
 
         &.attribute-field-checkbox {
