Add tooltip arrow up

--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -67,6 +67,14 @@
         left: 50%;
     }
 
+    .igz-tooltip-arrow-up {
+        .triangle-arrow(up, @tooltip-arrow-down-color, 7px, 7px);
+        position: absolute;
+        top: -7px;
+        margin-left: -7px;
+        left: 50%;
+    }
+
     .igz-row span {
         overflow: hidden;
         white-space: nowrap;
