--- a/src/nuclio/common/screens/create-function/create-function.less
+++ b/src/nuclio/common/screens/create-function/create-function.less
@@ -8,11 +8,20 @@
         background: url('/assets/images/nuclio.png') no-repeat center;
         background-size: cover;
 
-        .title {
+        .title-wrapper {
             color: white;
-            font-size: 18px;
-            font-weight: 500;
-            font-family: 'Roboto', sans-serif;
+            display: flex;
+            justify-content: space-between;
+
+            .title {
+                font-size: 18px;
+                font-weight: 500;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            .igz-icon-close {
+                font-size: 18px;
+            }
         }
 
         .new-function-types {
