[Browse] Add new table view

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -202,6 +202,10 @@
     .generateIconClass(925);
 }
 
+.igz-icon-table {
+    .generateIconClass(98c);
+}
+
 .igz-icon-refresh {
     .generateIconClass(926);
     font-size: 16px;
