--- a/src/nuclio/common/screens/create-function/create-function.less
+++ b/src/nuclio/common/screens/create-function/create-function.less
@@ -3,34 +3,45 @@
 
     .new-function-header {
         width: 100%;
-        height: 377px;
+        height: 318px;
+        padding: 24px 55px 40px 55px;
         background: url('/assets/images/nuclio.png') no-repeat center;
         background-size: cover;
 
-        .title {
+        .title-wrapper {
             color: white;
-            font-size: 18px;
-            font-weight: 500;
-            font-family: 'Roboto', sans-serif;
-            padding: 30px 0 19px 55px;
+            display: flex;
+            justify-content: space-between;
+
+            .title {
+                font-size: 18px;
+                font-weight: 500;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            .igz-icon-close {
+                font-size: 18px;
+            }
         }
 
         .new-function-types {
             display: flex;
             justify-content: center;
             width: 100%;
-            padding: 0 133px;
+            margin-top: 15px;
 
             .type-wrapper {
-                padding: 0 24px;
                 width: 100%;
 
+                &:not(:last-child) {
+                    margin-right: 24px;
+                }
+
                 .type-template {
-                    max-width: 503px;
-                    min-width: 272px;
-                    height: 254px;
+                    height: 214px;
                     background-color: @white;
                     opacity: 0.9;
+                    padding: 24px;
                     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
                     border-radius: 2px;
                     display: flex;
@@ -42,7 +53,7 @@
                         height: 145px;
                         line-height: 1px;
                         position: relative;
-                        margin: 0 30px 0 39px;
+                        margin-right: 30px;
 
                         .icon {
                             position: absolute;
@@ -66,8 +77,6 @@
                     }
 
                     .function-type-info {
-                        margin-right: 39px;
-
                         .type-title {
                             color: @light-blue;
                             font-size: 18px;
@@ -104,34 +113,35 @@
 }
 
 .function-type-content-wrapper {
-    padding: 40px 0 0 0;
+    padding: 25px 0 0 0;
     margin: 0 0 20px 0;
 }
 
-@media screen and (max-width: 1448px) {
+@media screen and (max-width: 1280px) {
     .new-function-wrapper {
         .new-function-header {
+            height: 380px;
+
             .new-function-types {
-                padding: 0 30px;
-                justify-content: space-around;
-                margin-bottom: 10px;
+                padding: 0 77px;
 
                 .type-wrapper {
                     .type-template {
+                        height: 276px;
+                        width: 288px;
                         flex-direction: column;
-                        width: 272px;
-                        height: 284px;
 
                         .function-type-icon {
-                            margin: 36px 0 9px 0;
+                            margin: 0 auto;
                         }
 
                         .function-type-info {
                             margin-right: 0;
+                            margin-top: 10px;
                             text-align: center;
 
                             .type-title {
-                                margin-bottom: 10px;
+                                margin-bottom: 4px;
                             }
                         }
                     }
