--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.less
@@ -50,8 +50,6 @@
     }
 
     .templates-wrapper {
-        margin-top: 10px;
-
         .title {
             font-size: 16px;
             font-weight: bold;
@@ -65,7 +63,7 @@
             height: 55px;
 
             .templates-search-input {
-                width: 71%;
+                width: 66%;
                 display: flex;
                 position: relative;
                 flex-direction: column;
@@ -119,7 +117,7 @@
             }
 
             .templates-pagination {
-                min-width: 237px;
+                min-width: 241px;
                 display: flex;
                 align-items: flex-end;
                 justify-content: flex-end;
@@ -139,103 +137,110 @@
 
         .function-templates {
             display: flex;
+            position: relative;
             flex-flow: row wrap;
             margin-top: 32px;
 
             .function-template-wrapper {
-                width: 400px;
-                height: 268px;
-                background-color: @white;
+                width: 352px;
+                min-height: 169px;
                 box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-                border-radius: 2px;
-                padding: 26px 34px 23px 23px;
-                margin: 0 16px 30px 0;
+                margin: 0 16px 14px 0;
                 position: relative;
 
+                &:hover,
                 &.selected {
-                    border: 2px solid @dark-sky-blue;
-                    box-shadow: inherit;
-                    background-color: @light-blue-three;
-
-                    &:before {
-                        content: '\e965';
-                        font-family: 'iguazio';
-                        font-size: 228px;
+                    .function-template {
                         position: absolute;
-                        top: 0;
-                        left: 86px;
-                        color: @light-grey-two;
-                        height: 100%;
-                        display: flex;
-                        align-items: center;
-                    }
-                }
+                        box-shadow: inherit;
 
-                .add-template-icon-wrapper {
-                    display: none;
-                    width: 34px;
-                    height: 34px;
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    background-color: @dark-sky-blue;
-                    border-bottom-left-radius: 4px;
+                        .function-template-content {
+                            .template-description {
+                                max-height: unset;
+                            }
 
-                    .igz-icon-add {
-                        color: @white;
-                        font-size: 10px;
-                    }
-
-                    &.disabled {
-                        background-color: @pale-grey;
-                        border: solid 1px @pale-grey;
-                        box-shadow: none;
-                        cursor: default;
-                    }
-
-                    &.selected {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-
-                    &:active {
-                        &:not(.disabled) {
-                            background-color: @bluish;
-                            box-shadow: inset 0.4px 1.9px 3px 0 rgba(0, 0, 0, 0.2);
-                            border: none;
-                            outline: none;
+                            .template-read-more {
+                                display: none;
+                            }
                         }
                     }
                 }
 
-                .function-template-content {
-                    position: absolute;
-                    width: 343px;
+                &.selected {
+                    .function-template {
+                        border: 2px solid @orange;
+                        z-index: 2;
 
-                    .template-title {
-                        color: @light-blue-two;
-                        font-size: 19px;
-                        font-weight: bold;
-                        width: 100%;
-                        margin-bottom: 19px;
+                        .function-template-content {
+                            .template-create-button {
+                                width: 100%;
+                                display: flex;
+                                margin-top: 24px;
+
+                                .ncl-primary-button {
+                                    margin-left: unset;
+                                }
+                            }
+
+                            .template-create-button {
+                                justify-content: center;
+                            }
+
+                            .function-name {
+                                margin-top: 16px;
+                            }
+
+                            .projects-drop-down,
+                            .function-name {
+                                .input-label {
+                                    color: @dusk-three;
+                                    font-size: 14px;
+                                    font-weight: 500;
+                                    margin-bottom: 8px;
+                                }
+                            }
+
+                            .buttons-wrapper {
+                                display: flex;
+                                justify-content: flex-end;
+                                margin-top: 24px;
+                            }
+                        }
                     }
+                }
 
-                    .template-description {
+                .function-template {
+                    width: 100%;
+                    min-height: 169px;
+                    padding: 24px;
+                    background-color: @white;
+                    border-radius: 2px;
+                    z-index: 1;
+
+                    .function-template-content {
                         color: @dusk-three;
-                        font-size: 15px;
-                        width: 100%;
-                        margin-bottom: 52px;
+
+                        .template-title {
+                            font-size: 18px;
+                            font-weight: bold;
+                            width: 100%;
+                            margin-bottom: 15px;
+                        }
+
+                        .template-description {
+                            width: 100%;
+                            max-height: 62px;
+                            font-size: 14px;
+                            overflow: hidden;
+                        }
+
+                        .template-read-more {
+                            color: @greyish-purple;
+                            font-style: italic;
+                        }
                     }
                 }
             }
-        }
-
-        .bottom-bar {
-            display: flex;
-            justify-content: flex-end;
-            margin-top: 2px;
-            padding-right: 16px;
         }
     }
 }
